style: bake ic_launcher

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,56 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="25.658"
+    android:viewportHeight="25.658">
+  <group android:scaleX="1.18"
+      android:scaleY="1.18"
+      android:translateX="-2.30922"
+      android:translateY="-2.30922">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillColor="#FF000000"
+        android:pathData="M-2.606,-1.993h30.869v29.643h-30.869z"/>
+    <path
+        android:pathData="M11.424,0.081"
+        android:fillColor="#005846"/>
+    <path
+        android:pathData="M1.044,7.762L1.044,7.762"
+        android:fillColor="#005846"/>
+    <path
+        android:pathData="M7.82,24.642L7.82,24.642"
+        android:fillColor="#005846"/>
+    <path
+        android:pathData="M4.938,22.929L4.938,22.929"
+        android:fillColor="#005846"/>
+    <path
+        android:pathData="M1.163,18.145L1.163,18.145"
+        android:fillColor="#005846"/>
+    <path
+        android:pathData="M0.839,8.298L0.839,8.298"
+        android:fillColor="#005846"/>
+    <path
+        android:pathData="M8.367,24.844L8.367,24.844"
+        android:fillColor="#005846"/>
+    <path
+        android:pathData="M24.614,7.761C22.648,3.197 18.113,0 12.829,0c-0.475,0 -0.943,0.03 -1.405,0.081l1.016,7.684c0.128,-0.01 0.256,-0.02 0.387,-0.02c2.047,0 3.808,1.201 4.633,2.934L24.614,7.761z"
+        android:fillColor="#12894B"/>
+    <path
+        android:pathData="M10.857,0.167c-4.421,0.684 -8.098,3.611 -9.813,7.595l7.151,2.917c0.693,-1.456 2.046,-2.534 3.677,-2.841L10.857,0.167z"
+        android:fillColor="#7AA032"/>
+    <path
+        android:pathData="M5.397,23.273c0.753,0.537 1.56,1.003 2.422,1.369l2.842,-7.115c-0.235,-0.11 -0.463,-0.233 -0.677,-0.376L5.397,23.273z"
+        android:fillColor="#CE202C"/>
+    <path
+        android:pathData="M17.677,11.209c0.18,0.524 0.283,1.084 0.283,1.668c0,2.06 -1.216,3.831 -2.967,4.649l2.842,7.117c4.598,-1.951 7.823,-6.506 7.823,-11.815c0,-1.598 -0.305,-3.121 -0.839,-4.532L17.677,11.209z"
+        android:fillColor="#0A6043"/>
+    <path
+        android:pathData="M8.227,15.144l-7.063,3.001c0.861,1.885 2.161,3.522 3.774,4.785l4.588,-6.124C8.984,16.35 8.543,15.784 8.227,15.144z"
+        android:fillColor="#E5542C"/>
+    <path
+        android:pathData="M8.003,14.616c-0.196,-0.544 -0.308,-1.127 -0.308,-1.738c0,-0.585 0.103,-1.145 0.283,-1.668l-7.138,-2.911C0.305,9.709 0,11.231 0,12.829c0,1.695 0.337,3.309 0.934,4.791L8.003,14.616z"
+        android:fillColor="#FFBF31"/>
+    <path
+        android:pathData="M14.477,17.735c0,0 -0.362,-0.171 -0.832,-0.701c-0.47,-0.53 -0.448,-1.439 -0.448,-1.439v-4.26h-0.12v-0.36c0.67,0.05 1.44,0.34 2,0.51l-0.9,2.54h-0.17c0.17,0.56 0.7,0.97 1.31,0.97c0.62,0 1.15,-0.41 1.32,-0.97h-0.17l-0.85,-2.42c0.59,0.01 0.74,-0.3 0.81,-0.41c0.11,-0.15 -0.11,-0.3 -0.23,-0.2s-0.44,0.31 -1.04,0.03c-0.55,-0.26 -1.52,-0.7 -2.08,-0.78V9.665c0,-0.13 -0.11,-0.24 -0.24,-0.24s-0.24,0.11 -0.24,0.24v0.58c-0.56,0.08 -1.53,0.52 -2.08,0.78c-0.6,0.28 -0.92,0.07 -1.04,-0.03s-0.34,0.05 -0.23,0.2c0.07,0.11 0.22,0.42 0.81,0.41l-0.85,2.42H9.037c0.17,0.56 0.7,0.97 1.32,0.97c0.61,0 1.14,-0.41 1.31,-0.97h-0.17l-0.9,-2.54c0.56,-0.17 1.33,-0.46 2,-0.51v0.36h-0.12v4.26c0,0 0.022,0.909 -0.448,1.439c-0.47,0.53 -0.832,0.701 -0.832,0.701l-2.83,7.109c1.392,0.517 2.89,0.814 4.462,0.814s3.086,-0.297 4.478,-0.814L14.477,17.735zM15.317,11.805l0.79,2.22h-1.57L15.317,11.805zM11.137,14.025H9.567l0.79,-2.22L11.137,14.025z"
+        android:fillColor="#E2F7EF"/>
+  </group>
 </vector>
