--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -3,54 +3,33 @@
     android:height="108dp"
     android:viewportWidth="25.658"
     android:viewportHeight="25.658">
-  <group android:scaleX="1.18"
-      android:scaleY="1.18"
-      android:translateX="-2.30922"
-      android:translateY="-2.30922">
+  <group android:scaleX="0.8922222"
+      android:scaleY="0.8922222"
+      android:translateX="1.3826811"
+      android:translateY="1.3826811">
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M-2.606,-1.993h30.869v29.643h-30.869z"/>
-    <path
-        android:pathData="M11.424,0.081"
+        android:pathData="M1.044,7.762h0m6.776,16.88h0m-2.882,-1.713h0m-3.775,-4.784h0M0.839,8.298h0m7.528,16.546h0"
         android:fillColor="#005846"/>
     <path
-        android:pathData="M1.044,7.762L1.044,7.762"
-        android:fillColor="#005846"/>
+        android:pathData="M24.614,7.761C22.648,3.197 18.113,0 12.829,0c-0.475,0 -0.943,0.03 -1.405,0.081l1.016,7.684c0.128,-0.01 0.256,-0.02 0.387,-0.02 2.047,0 3.808,1.201 4.633,2.934l7.154,-2.918z"
+        android:fillColor="#12894b"/>
     <path
-        android:pathData="M7.82,24.642L7.82,24.642"
-        android:fillColor="#005846"/>
+        android:pathData="M10.857,0.167C6.436,0.851 2.759,3.778 1.044,7.762l7.151,2.917c0.693,-1.456 2.046,-2.534 3.677,-2.841L10.857,0.167z"
+        android:fillColor="#7aa032"/>
     <path
-        android:pathData="M4.938,22.929L4.938,22.929"
-        android:fillColor="#005846"/>
+        android:pathData="M5.397,23.273a12.79,12.79 0,0 0,2.422 1.369l2.842,-7.115c-0.235,-0.11 -0.463,-0.233 -0.677,-0.376l-4.587,6.123z"
+        android:fillColor="#ce202c"/>
     <path
-        android:pathData="M1.163,18.145L1.163,18.145"
-        android:fillColor="#005846"/>
+        android:pathData="M17.677,11.209c0.18,0.524 0.283,1.084 0.283,1.668 0,2.06 -1.216,3.831 -2.967,4.649l2.842,7.117c4.598,-1.951 7.823,-6.506 7.823,-11.815 0,-1.598 -0.305,-3.121 -0.839,-4.532l-7.141,2.912z"
+        android:fillColor="#0a6043"/>
     <path
-        android:pathData="M0.839,8.298L0.839,8.298"
-        android:fillColor="#005846"/>
+        android:pathData="M8.227,15.144l-7.063,3.001c0.861,1.885 2.161,3.522 3.774,4.785l4.588,-6.124c-0.541,-0.455 -0.983,-1.021 -1.299,-1.662z"
+        android:fillColor="#e5542c"/>
     <path
-        android:pathData="M8.367,24.844L8.367,24.844"
-        android:fillColor="#005846"/>
+        android:pathData="M8.003,14.616a5.11,5.11 0,0 1,-0.308 -1.738c0,-0.585 0.103,-1.145 0.283,-1.668L0.839,8.298C0.305,9.709 0,11.231 0,12.829c0,1.695 0.337,3.309 0.934,4.791l7.069,-3.003z"
+        android:fillColor="#ffbf31"/>
     <path
-        android:pathData="M24.614,7.761C22.648,3.197 18.113,0 12.829,0c-0.475,0 -0.943,0.03 -1.405,0.081l1.016,7.684c0.128,-0.01 0.256,-0.02 0.387,-0.02c2.047,0 3.808,1.201 4.633,2.934L24.614,7.761z"
-        android:fillColor="#12894B"/>
-    <path
-        android:pathData="M10.857,0.167c-4.421,0.684 -8.098,3.611 -9.813,7.595l7.151,2.917c0.693,-1.456 2.046,-2.534 3.677,-2.841L10.857,0.167z"
-        android:fillColor="#7AA032"/>
-    <path
-        android:pathData="M5.397,23.273c0.753,0.537 1.56,1.003 2.422,1.369l2.842,-7.115c-0.235,-0.11 -0.463,-0.233 -0.677,-0.376L5.397,23.273z"
-        android:fillColor="#CE202C"/>
-    <path
-        android:pathData="M17.677,11.209c0.18,0.524 0.283,1.084 0.283,1.668c0,2.06 -1.216,3.831 -2.967,4.649l2.842,7.117c4.598,-1.951 7.823,-6.506 7.823,-11.815c0,-1.598 -0.305,-3.121 -0.839,-4.532L17.677,11.209z"
-        android:fillColor="#0A6043"/>
-    <path
-        android:pathData="M8.227,15.144l-7.063,3.001c0.861,1.885 2.161,3.522 3.774,4.785l4.588,-6.124C8.984,16.35 8.543,15.784 8.227,15.144z"
-        android:fillColor="#E5542C"/>
-    <path
-        android:pathData="M8.003,14.616c-0.196,-0.544 -0.308,-1.127 -0.308,-1.738c0,-0.585 0.103,-1.145 0.283,-1.668l-7.138,-2.911C0.305,9.709 0,11.231 0,12.829c0,1.695 0.337,3.309 0.934,4.791L8.003,14.616z"
-        android:fillColor="#FFBF31"/>
-    <path
-        android:pathData="M14.477,17.735c0,0 -0.362,-0.171 -0.832,-0.701c-0.47,-0.53 -0.448,-1.439 -0.448,-1.439v-4.26h-0.12v-0.36c0.67,0.05 1.44,0.34 2,0.51l-0.9,2.54h-0.17c0.17,0.56 0.7,0.97 1.31,0.97c0.62,0 1.15,-0.41 1.32,-0.97h-0.17l-0.85,-2.42c0.59,0.01 0.74,-0.3 0.81,-0.41c0.11,-0.15 -0.11,-0.3 -0.23,-0.2s-0.44,0.31 -1.04,0.03c-0.55,-0.26 -1.52,-0.7 -2.08,-0.78V9.665c0,-0.13 -0.11,-0.24 -0.24,-0.24s-0.24,0.11 -0.24,0.24v0.58c-0.56,0.08 -1.53,0.52 -2.08,0.78c-0.6,0.28 -0.92,0.07 -1.04,-0.03s-0.34,0.05 -0.23,0.2c0.07,0.11 0.22,0.42 0.81,0.41l-0.85,2.42H9.037c0.17,0.56 0.7,0.97 1.32,0.97c0.61,0 1.14,-0.41 1.31,-0.97h-0.17l-0.9,-2.54c0.56,-0.17 1.33,-0.46 2,-0.51v0.36h-0.12v4.26c0,0 0.022,0.909 -0.448,1.439c-0.47,0.53 -0.832,0.701 -0.832,0.701l-2.83,7.109c1.392,0.517 2.89,0.814 4.462,0.814s3.086,-0.297 4.478,-0.814L14.477,17.735zM15.317,11.805l0.79,2.22h-1.57L15.317,11.805zM11.137,14.025H9.567l0.79,-2.22L11.137,14.025z"
-        android:fillColor="#E2F7EF"/>
+        android:pathData="M14.477,17.735s-0.362,-0.171 -0.832,-0.701 -0.448,-1.439 -0.448,-1.439v-4.26h-0.12v-0.36c0.67,0.05 1.44,0.34 2,0.51l-0.9,2.54h-0.17a1.38,1.38 0,0 0,2.63 0h-0.17l-0.85,-2.42c0.59,0.01 0.74,-0.3 0.81,-0.41 0.11,-0.15 -0.11,-0.3 -0.23,-0.2s-0.44,0.31 -1.04,0.03c-0.55,-0.26 -1.52,-0.7 -2.08,-0.78v-0.58c0,-0.13 -0.11,-0.24 -0.24,-0.24s-0.24,0.11 -0.24,0.24v0.58c-0.56,0.08 -1.53,0.52 -2.08,0.78 -0.6,0.28 -0.92,0.07 -1.04,-0.03s-0.34,0.05 -0.23,0.2c0.07,0.11 0.22,0.42 0.81,0.41l-0.85,2.42h-0.17a1.38,1.38 0,0 0,2.63 0h-0.17l-0.9,-2.54c0.56,-0.17 1.33,-0.46 2,-0.51v0.36h-0.12v4.26s0.022,0.909 -0.448,1.439 -0.832,0.701 -0.832,0.701l-2.83,7.109c1.392,0.517 2.89,0.814 4.462,0.814a12.86,12.86 0,0 0,4.478 -0.814l-2.83,-7.109zM15.317,11.805l0.79,2.22h-1.57l0.78,-2.22zM11.137,14.025h-1.57l0.79,-2.22 0.78,2.22z"
+        android:fillColor="#22302b"/>
   </group>
 </vector>
