--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,35 +1,32 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="25.658"
-    android:viewportHeight="25.658">
-  <group android:scaleX="0.8922222"
-      android:scaleY="0.8922222"
-      android:translateX="1.3826811"
-      android:translateY="1.3826811">
+    android:viewportWidth="17.282"
+    android:viewportHeight="17.282">
+  <group android:scaleX="0.4888889"
+      android:scaleY="0.4888889"
+      android:translateX="4.416511"
+      android:translateY="4.416511">
     <path
-        android:pathData="M1.044,7.762h0m6.776,16.88h0m-2.882,-1.713h0m-3.775,-4.784h0M0.839,8.298h0m7.528,16.546h0"
-        android:fillColor="#005846"/>
-    <path
-        android:pathData="M24.614,7.761C22.648,3.197 18.113,0 12.829,0c-0.475,0 -0.943,0.03 -1.405,0.081l1.016,7.684c0.128,-0.01 0.256,-0.02 0.387,-0.02 2.047,0 3.808,1.201 4.633,2.934l7.154,-2.918z"
+        android:pathData="M8.652,3.562a5.13,5.13 0,0 1,4.633 2.934l3.264,-1.331A8.64,8.64 0,0 0,8.641 0a8.72,8.72 0,0 0,-0.844 0.043l0.468,3.539 0.387,-0.02z"
         android:fillColor="#12894b"/>
     <path
-        android:pathData="M10.857,0.167C6.436,0.851 2.759,3.778 1.044,7.762l7.151,2.917c0.693,-1.456 2.046,-2.534 3.677,-2.841L10.857,0.167z"
+        android:pathData="M7.696,3.654L7.229,0.125C4.316,0.605 1.895,2.535 0.737,5.157L4.02,6.496c0.693,-1.456 2.046,-2.534 3.677,-2.841z"
         android:fillColor="#7aa032"/>
     <path
-        android:pathData="M5.397,23.273a12.79,12.79 0,0 0,2.422 1.369l2.842,-7.115c-0.235,-0.11 -0.463,-0.233 -0.677,-0.376l-4.587,6.123z"
+        android:pathData="M5.809,12.968l-2.081,2.778c0.46,0.319 0.952,0.594 1.471,0.82l1.287,-3.222c-0.235,-0.11 -0.463,-0.233 -0.677,-0.376Z"
         android:fillColor="#ce202c"/>
     <path
-        android:pathData="M17.677,11.209c0.18,0.524 0.283,1.084 0.283,1.668 0,2.06 -1.216,3.831 -2.967,4.649l2.842,7.117c4.598,-1.951 7.823,-6.506 7.823,-11.815 0,-1.598 -0.305,-3.121 -0.839,-4.532l-7.141,2.912z"
+        android:pathData="M13.785,8.695a5.13,5.13 0,0 1,-2.967 4.649l1.283,3.213c3.049,-1.335 5.181,-4.374 5.181,-7.915 0,-1.035 -0.191,-2.022 -0.525,-2.942l-3.255,1.327c0.18,0.524 0.283,1.084 0.283,1.668z"
         android:fillColor="#0a6043"/>
     <path
-        android:pathData="M8.227,15.144l-7.063,3.001c0.861,1.885 2.161,3.522 3.774,4.785l4.588,-6.124c-0.541,-0.455 -0.983,-1.021 -1.299,-1.662z"
+        android:pathData="M4.052,10.961L0.835,12.328c0.569,1.203 1.403,2.254 2.434,3.074l2.082,-2.779c-0.541,-0.455 -0.983,-1.021 -1.299,-1.662z"
         android:fillColor="#e5542c"/>
     <path
-        android:pathData="M8.003,14.616a5.11,5.11 0,0 1,-0.308 -1.738c0,-0.585 0.103,-1.145 0.283,-1.668L0.839,8.298C0.305,9.709 0,11.231 0,12.829c0,1.695 0.337,3.309 0.934,4.791l7.069,-3.003z"
+        android:pathData="M3.519,8.695c0,-0.585 0.103,-1.145 0.283,-1.668L0.528,5.691C0.193,6.613 0,7.603 0,8.641c0,1.117 0.219,2.182 0.605,3.162l3.222,-1.369a5.11,5.11 0,0 1,-0.308 -1.738z"
         android:fillColor="#ffbf31"/>
     <path
-        android:pathData="M14.477,17.735s-0.362,-0.171 -0.832,-0.701 -0.448,-1.439 -0.448,-1.439v-4.26h-0.12v-0.36c0.67,0.05 1.44,0.34 2,0.51l-0.9,2.54h-0.17a1.38,1.38 0,0 0,2.63 0h-0.17l-0.85,-2.42c0.59,0.01 0.74,-0.3 0.81,-0.41 0.11,-0.15 -0.11,-0.3 -0.23,-0.2s-0.44,0.31 -1.04,0.03c-0.55,-0.26 -1.52,-0.7 -2.08,-0.78v-0.58c0,-0.13 -0.11,-0.24 -0.24,-0.24s-0.24,0.11 -0.24,0.24v0.58c-0.56,0.08 -1.53,0.52 -2.08,0.78 -0.6,0.28 -0.92,0.07 -1.04,-0.03s-0.34,0.05 -0.23,0.2c0.07,0.11 0.22,0.42 0.81,0.41l-0.85,2.42h-0.17a1.38,1.38 0,0 0,2.63 0h-0.17l-0.9,-2.54c0.56,-0.17 1.33,-0.46 2,-0.51v0.36h-0.12v4.26s0.022,0.909 -0.448,1.439 -0.832,0.701 -0.832,0.701l-2.83,7.109c1.392,0.517 2.89,0.814 4.462,0.814a12.86,12.86 0,0 0,4.478 -0.814l-2.83,-7.109zM15.317,11.805l0.79,2.22h-1.57l0.78,-2.22zM11.137,14.025h-1.57l0.79,-2.22 0.78,2.22z"
+        android:pathData="M9.469,12.852c-0.47,-0.53 -0.448,-1.439 -0.448,-1.439l-0.002,-3.808c0,-0.574 -0.12,-0.635 -0.12,-0.635v-0.474c0.67,0.05 1.341,0.491 1.901,0.661l-0.9,2.209h-0.17a1.38,1.38 0,0 0,2.63 0h-0.17l-0.85,-2.089c0.59,0.01 0.74,-0.3 0.81,-0.41 0.11,-0.15 -0.11,-0.3 -0.23,-0.2s-0.44,0.31 -1.04,0.03c-0.55,-0.26 -1.421,-0.705 -1.981,-0.785l0.002,-0.931c0,-0.13 -0.11,-0.24 -0.24,-0.24s-0.24,0.11 -0.24,0.24l-0.002,0.931c-0.56,0.08 -1.459,0.525 -2.009,0.785 -0.6,0.28 -0.92,0.07 -1.04,-0.03s-0.34,0.05 -0.23,0.2c0.07,0.11 0.22,0.42 0.81,0.41L5.1,9.366h-0.17a1.38,1.38 0,0 0,2.63 0h-0.17l-0.9,-2.209c0.56,-0.17 1.259,-0.611 1.929,-0.661v0.474s-0.12,0.065 -0.12,0.635l0.002,3.808s0.022,0.909 -0.448,1.439 -0.832,0.701 -0.832,0.701l-1.282,3.22a8.61,8.61 0,0 0,2.901 0.51c1.033,0 2.019,-0.191 2.937,-0.523l-1.276,-3.206s-0.362,-0.171 -0.832,-0.701zM11.04,7.477l0.79,1.889h-1.57l0.78,-1.889zM7.03,9.366L5.46,9.366l0.79,-1.889 0.78,1.889z"
         android:fillColor="#22302b"/>
   </group>
 </vector>
